--- a/css/deck.css
+++ b/css/deck.css
@@ -1,4 +1,3 @@
-
 body {
   --main-height: 100px;
 }
@@ -11,11 +10,14 @@ deck header
   height: 6rem;
   width: 100%;
   background-color: var(--background-color-400);
-  background-image: linear-gradient(to top, var(--background-color-500) 0%, var(--background-color-400) 60%);
+  background-image: linear-gradient(
+    to top,
+    var(--background-color-500) 0%,
+    var(--background-color-400) 60%
+  );
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .deck-header-container {
@@ -32,7 +34,11 @@ deck header
   font-family: tsuki;
   font-size: 3rem;
   letter-spacing: 1.5px;
-  background-image: linear-gradient(to bottom, var(--primary-color) 0%, var(--secondary-color) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    var(--primary-color) 0%,
+    var(--secondary-color) 100%
+  );
   -moz-background-clip: text;
   -webkit-background-clip: text;
   -moz-text-fill-color: transparent;
@@ -54,7 +60,7 @@ deck header
 }
 
 .create-icon {
-  position:relative;
+  position: relative;
   background-color: ;
   display: flex;
   align-items: center;
@@ -76,7 +82,7 @@ cards section
 .cards-section-navigation-btns {
   position: relative;
   margin-top: 1rem;
-  background-color:;
+  background-color: ;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -104,7 +110,7 @@ cards section
 
 .cards-btn::before,
 .mastery-btn::before {
-  content: '';
+  content: "";
   z-index: -1;
   position: absolute;
   width: 100%;
@@ -164,13 +170,13 @@ button.focused::before {
   top: 0;
   left: 0;
   transform: translate(-50%, -50%) rotate(45deg);
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, .15);
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .card-tag span {
   margin: 0;
   position: absolute;
-  right: .5rem;
+  right: 0.5rem;
   top: 50%;
   transform: translateY(-50%) rotate(-45deg);
   font-size: 1rem;
@@ -196,8 +202,8 @@ button.focused::before {
 
 .card-content i {
   position: absolute;
-  right: .5rem;
-  top: .2rem;
+  right: 0.5rem;
+  top: 0.2rem;
   font-size: 1.2rem;
   color: var(--secondary-color);
   background-color: ;
@@ -211,7 +217,7 @@ button.focused::before {
 }
 
 .card-content i::after {
-  content: '';
+  content: "";
   background-color: var(--light-color-700);
   position: absolute;
   width: 100%;
@@ -249,7 +255,7 @@ card window
   position: absolute;
   top: -1000px;
   opacity: 1;
-  
+
   margin-top: 2rem;
   background-color: var(--background-color-300);
   border-radius: var(--border-radius-500);
@@ -261,7 +267,7 @@ card window
   transition: all 500ms ease;
   padding-bottom: 2rem;
   overflow: scroll;
-  max-height: 70vh;
+  max-height: 30vh;
 }
 
 .show-card-window {
@@ -307,7 +313,7 @@ card window
   font-size: 1rem;
   color: var(--secondary-color);
   color: #bf0000;
-  right: .5rem;
+  right: 0.5rem;
 }
 
 .card-definition-icon {
@@ -322,7 +328,7 @@ card window
   background-color: transparent;
   border: none;
   outline: none;
-  border-bottom: 2px solid var(--secondary-color); 
+  border-bottom: 2px solid var(--secondary-color);
 }
 
 .card-window-form .input-box label {
@@ -332,7 +338,7 @@ card window
   top: 50%;
   transform: translateY(-50%);
   transition: var(--transition);
-  color: var(--light-color-600); 
+  color: var(--light-color-600);
 }
 
 .card-window-form .input-box input:hover ~ label,
@@ -354,7 +360,7 @@ card mastery
   justify-content: center;
   align-items: flex-start;
   z-index: 1000;
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
   transition: all 500ms ease;
   left: -1000px;
@@ -381,12 +387,15 @@ card mastery
   min-height: 1px;
   max-height: 50vh;
   height: 50vh;
-  background-image: linear-gradient(to top, var(--background-color-400) 0%, var(--background-color-500) 100%);
+  background-image: linear-gradient(
+    to top,
+    var(--background-color-400) 0%,
+    var(--background-color-500) 100%
+  );
   border-radius: 20px;
   border: 1px solid var(--primary-color);
   padding: 1.5rem 1rem;
   overflow: scroll;
-
 }
 
 .show-card-mastery {
@@ -409,7 +418,7 @@ card mastery
   border-top: 1px solid var(--primary-color);
   font-family: tsuki;
   letter-spacing: 1.5px;
-  padding: .5rem .5rem;
+  padding: 0.5rem 0.5rem;
   height: auto;
 }
 
@@ -481,11 +490,11 @@ Options
   z-index: 1;
 }
 
-.edit-option::before, 
+.edit-option::before,
 .delete-option::before,
 .confirmation-modal div span:first-child::before,
 .confirmation-modal div span:last-child::before {
-  content: '';
+  content: "";
   border-radius: 10px;
   width: 100%;
   height: 100%;
@@ -502,7 +511,7 @@ Options
 .edit-option:hover::before,
 .delete-option:hover::before,
 .confirmation-modal div span:first-child:hover::before,
-.confirmation-modal div span:last-child:hover::before{
+.confirmation-modal div span:last-child:hover::before {
   transform: scaleX(1);
   opacity: 1;
 }
@@ -520,7 +529,7 @@ Options
 
 .delete-option {
   color: var(--secondary-color);
-} 
+}
 
 /*
 confirmation modal
@@ -590,9 +599,8 @@ confirmation modal
   align-items: flex-start;
   flex-grow: 1;
   position: relative;
-  
 }
-  
+
 .confirmation-modal div span:first-child {
   color: var(--primary-color);
   border-right: 1px solid var(--light-color-700);
@@ -626,7 +634,7 @@ card fisplay
   background-color: var(--background-color-300-0);
   height: 1px;
   border-radius: 20px;
-  
+
   overflow: scroll;
   top: calc(100% + 2rem);
   top: -1000px;
@@ -653,7 +661,6 @@ card fisplay
 .card-display-definition {
   background-color: ;
   margin-left: 2.5rem;
-  
 }
 
 .card-display-definition ul {
@@ -664,8 +671,8 @@ card fisplay
   color: var(--primary-color);
   color: var(--light-color-700);
   padding-bottom: 2rem;
-  font-size: .9rem;
+  font-size: 0.9rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem
+  gap: 1rem;
 }
