--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,7 @@
 :root {
   --max-width: 1100px;
   --background-color-500: #333;
+  --max-form-width: 450px;
   
   /* colors 
   --background-color-500: #1a1c19;
