--- a/css/deck.css
+++ b/css/deck.css
@@ -2,6 +2,15 @@ body {
   --main-height: 100px;
 }
 
+::-webkit-scrollbar {
+  background-color: transparent;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+}
+
 /*
 deck header
 */
@@ -136,7 +145,7 @@ button.focused::before {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 100px;
   gap: 1rem 3rem;
-  overflow: scroll;
+  overflow-y: scroll;
   justify-items: center;
   min-height: calc(var(--main-height) - 9rem);
   padding-bottom: 5rem;
@@ -259,19 +268,20 @@ card window
   margin-top: 2rem;
   background-color: var(--background-color-300);
   border-radius: var(--border-radius-500);
-  min-height: 1vh;
+  height: 1vh;
   width: 90%;
+  max-width: var(--max-form-width);
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 500ms ease;
   padding-bottom: 2rem;
-  overflow: scroll;
-  max-height: 30vh;
+  overflow-y: scroll;
 }
 
 .show-card-window {
-  min-height: 50vh;
+  height: 50vh;
+  min-height: 400px;
   top: 100%;
   opacity: 1;
 }
@@ -384,6 +394,7 @@ card mastery
   grid-auto-flow: dense;
   align-content: flex-start;
   width: 90%;
+  max-width: var(--max-form-width);
   min-height: 1px;
   max-height: 50vh;
   height: 50vh;
@@ -395,7 +406,7 @@ card mastery
   border-radius: 20px;
   border: 1px solid var(--primary-color);
   padding: 1.5rem 1rem;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .show-card-mastery {
@@ -610,7 +621,7 @@ confirmation modal
 }
 
 /*
-card fisplay
+card display
 */
 
 .card-display-overlay {
@@ -631,11 +642,12 @@ card fisplay
   z-index: 10000;
   position: absolute;
   width: 90%;
+  max-width: var(--max-form-width);
   background-color: var(--background-color-300-0);
   height: 1px;
   border-radius: 20px;
 
-  overflow: scroll;
+  overflow-y: hidden;
   top: calc(100% + 2rem);
   top: -1000px;
   opacity: 0;
@@ -649,7 +661,7 @@ card fisplay
 }
 
 .card-display h2 {
-  overflow: scroll;
+  overflow-x: scroll;
   white-space: nowrap;
   margin-top: 3rem;
   margin-left: 2.5rem;
@@ -661,13 +673,15 @@ card fisplay
 .card-display-definition {
   background-color: ;
   margin-left: 2.5rem;
+  overflow-y: scroll;
+  height: calc(100% - 9rem);
 }
 
 .card-display-definition ul {
   list-style: circle inside;
   margin: 0;
   padding: 0;
-  margin-top: 2.5rem;
+ 
   color: var(--primary-color);
   color: var(--light-color-700);
   padding-bottom: 2rem;
