--- a/css/home.css
+++ b/css/home.css
@@ -102,7 +102,7 @@ Create create-deck Window
 }
 
 .show-deck-window {
-  height: 50vh;
+  min-height: 50vh;
   top: 100%;
   opacity: 1;
 }
@@ -195,12 +195,22 @@ main deck section
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 100px;
   gap: 1rem 3rem;
-  overflow: scroll;
+  overflow-y: scroll;
   justify-items: center;
   /* min-height: calc(100vh - 15rem); */
   padding-bottom: 5rem;
 }
 
+.deck-section-container::-webkit-scrollbar {
+  width: auto;
+  background-color: transparent;
+  border-radius: 10px;
+}
+.deck-section-container::-webkit-scrollbar-thumb {
+  width: auto;
+  background-color: var(--primary-color);
+  border-radius: 10px;
+}
 .deck {
   background-color: ;
   display: flex;
@@ -1097,20 +1107,28 @@ Theme
 play button
 */
 
-.deck-section > i {
+.play-button-container {
+  position: absolute;
+  width: 90%;
+  max-width: var(--max-width);
+  height: var(--main-height);
+  pointer-events: visiblePainted;
+}
+
+.play-button-container > i {
   border-radius: 50%;
   z-index: 501;
   position: absolute;
   font-size: 3rem;
   color: var(--primary-color);
   top: 0;
-  right: calc(15% / 2);
+  right: 0;
   transform: translateX(0);
   transition: all 500ms ease-out;
   background-color: transparent;
 }
 
-.deck-section > i.animate {
+.play-button-container > i.animate {
   top: 100%;
   right: 50%;
   transform: translateX(50%);
