--- a/css/writing.css
+++ b/css/writing.css
@@ -1,6 +1,16 @@
 ::-webkit-scrollbar {
-  width: 0; /* Set the width of the scrollbar */
+  background-color: transparent;
+  border-radius: 10px;
 }
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+
 
 /*
 header
@@ -85,6 +95,7 @@ card section
 .writing-container {
   width: 100%;
   height: 100%;
+  max-width: 500px;
   background-color: ;
 }
 
@@ -139,22 +150,19 @@ card section
   margin: 0;
   color: var(--primary-color);
   margin-top: 1.5rem;
-  /* padding-bottom: 5rem; */
+  padding-bottom: 4rem;
   font-size: .9rem;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
   width: 90%;
   overflow: scroll;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;
+  background-color:;
 }
 
 .writing-input {
   color: var(--light-color-700);
   transition: all 1ms ease; 
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;
   width: 100%;
   min-height: 2.1rem;
   max-height: 3rem;
@@ -176,6 +184,7 @@ card section
 .pagination-container {
   position: relative;
   width: 90vw;
+  max-width: 550px;
 }
 
 .correct-answer {
